--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ h2 {
 .content {
 	width: 960px;
 	margin: auto;
+	margin-bottom:30px;
 }
 
 #yourname {
@@ -151,6 +152,35 @@ h2 {
 	width: 100%;
 	height: 1px;
 	margin-bottom: 30px;
+}
+
+.stripe2 {
+	background-color: #4aaaa5;
+	width: 100%;
+	height: 8px;
+	float: bottom;
+	position: relative;
+	margin-top: 30px;
+}
+
+#footer {
+	clear: both;
+	height: 60px;
+	width: 100%;
+	float: bottom;
+	background-color: white;
+	border-top: #cccccc;
+	border-width: 1.5px;
+	position: relative;
+	text-align: center;
+}
+
+#footertext {
+	margin: auto;
+    padding-top: 40px;
+    background-color: #666666;
+    height: 60px;
+    color: white;
 }
 
 .clearfix:after {
