--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,16 @@ a {
 	color: gray;
 }
 
+/*h3 {
+	font-family: 'Ubuntu';
+}*/
+
 h2 {
 	display: block;
+}
+
+h1 {
+	font-family: 'Ubuntu';
 }
 
 .navmargin {
@@ -55,8 +63,8 @@ h2 {
     margin-left: 0px;
     position: absolute;
     z-index: 2;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 #about {
@@ -71,12 +79,12 @@ h2 {
 	border: solid;
 	border-color: #cccccc;
 	border-width: 1.5px;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 #aboutmetext {
 	color: #4aaaa5;
-	font-family: 'Georgia';
+	font-family: 'Ubuntu';
 	border-bottom: solid;
 	border-color: #cccccc;
 	margin-left: 5%;
@@ -101,12 +109,12 @@ h2 {
 	border: solid;
 	border-color: #cccccc;
 	border-width: 1.5px;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 #connecttext {
 	color: #4aaaa5;
-	font-family: 'Georgia';
+	font-family: 'Ubuntu';
 	border-bottom: solid;
 	border-color: #cccccc;
 	margin-left: 10%;
@@ -149,7 +157,7 @@ h2 {
 	margin-left: 5%;
 	margin-top: 5px;
 	margin-right: 5%;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 .stripe1 {
